src/tests/snapshots/codegen@unknown_assignment.input.snap
---
source: tests/ir_generator.rs
assertion_line: 33
expression: ir_to_string(ir_gen.generate(&ast))
input_file: tests/inputs/ir_gen/unknown_assignment.input

---
"Unknown variable in assignment: x"

