src/tests/snapshots/ir_gen@bad_l_value.input.snap
---
source: tests/ir_generator.rs
assertion_line: 34
expression: ir_to_string(ir_gen.generate(&ast))
input_file: tests/inputs/ir_gen/bad_l_value.input

---
Expected LHS to be a variable for assignment

