src/tests/snapshots/ir_gen@cond.input.snap
---
source: tests/ir_generator.rs
assertion_line: 34
expression: ir_to_string(ir_gen.generate(&ast))
input_file: tests/inputs/ir_gen/cond.input

---
"define i64 @main() {\nentry:\n  %tmpcall = call i64 @plus_one(i64 6)\n  ret i64 0\n}\n"

