src/tests/snapshots/lexer@cond.input.snap
---
source: src/lexer.rs
assertion_line: 262
expression: "Lexer::new(&input).collect::<Result<Vec<_>, _>>()"
input_file: src/tests/inputs/lexer/cond.input

---
Ok:
  - tt: If
    line: 1
    column: 1
  - tt:
      Ident: x
    line: 1
    column: 4
  - tt:
      Op: Gt
    line: 1
    column: 6
  - tt:
      Op: Minus
    line: 1
    column: 8
  - tt:
      Num: "3"
    line: 1
    column: 9
  - tt: OpenBrace
    line: 1
    column: 11
  - tt:
      Ident: print
    line: 2
    column: 5
  - tt: OpenParen
    line: 2
    column: 10
  - tt:
      Ident: x
    line: 2
    column: 11
  - tt: CloseParen
    line: 2
    column: 12
  - tt: CloseBrace
    line: 3
    column: 1
  - tt: Else
    line: 3
    column: 3
  - tt: OpenBrace
    line: 3
    column: 8
  - tt:
      Ident: exit
    line: 4
    column: 5
  - tt: OpenParen
    line: 4
    column: 9
  - tt: CloseParen
    line: 4
    column: 10
  - tt: CloseBrace
    line: 5
    column: 1
  - tt: If
    line: 7
    column: 1
  - tt:
      Ident: x
    line: 7
    column: 4
  - tt:
      Op: Gt
    line: 7
    column: 6
  - tt:
      Num: "3"
    line: 7
    column: 8
  - tt: OpenBrace
    line: 7
    column: 10
  - tt:
      Ident: print
    line: 8
    column: 5
  - tt: OpenParen
    line: 8
    column: 10
  - tt:
      Ident: x
    line: 8
    column: 11
  - tt: CloseParen
    line: 8
    column: 12
  - tt: CloseBrace
    line: 9
    column: 1
  - tt: Else
    line: 9
    column: 3
  - tt: If
    line: 9
    column: 8
  - tt:
      Ident: y
    line: 9
    column: 11
  - tt:
      Op: Eq
    line: 9
    column: 13
  - tt:
      Num: "1"
    line: 9
    column: 16
  - tt: OpenBrace
    line: 9
    column: 18
  - tt:
      Ident: exit
    line: 10
    column: 5
  - tt: OpenParen
    line: 10
    column: 9
  - tt: CloseParen
    line: 10
    column: 10
  - tt: CloseBrace
    line: 11
    column: 1
  - tt: Else
    line: 11
    column: 3
  - tt: OpenBrace
    line: 11
    column: 8
  - tt:
      Ident: z
    line: 12
    column: 5
  - tt: CloseBrace
    line: 13
    column: 1

