src/tests/snapshots/lexer@extern.input.snap
---
source: src/lexer.rs
assertion_line: 265
expression: "Lexer::new(&input).collect::<Result<Vec<_>, _>>()"
input_file: src/tests/inputs/lexer/extern.input

---
Ok:
  - tt: Extern
    line: 1
    column: 1
  - tt:
      Ident: cos
    line: 1
    column: 8
  - tt: OpenParen
    line: 1
    column: 11
  - tt:
      Ident: x
    line: 1
    column: 12
  - tt: CloseParen
    line: 1
    column: 13

