src/tests/snapshots/lexer@fn.input.snap
---
source: tests/lexer.rs
assertion_line: 12
expression: "Lexer::new(&input).collect::<Result<Vec<_>, _>>()"
input_file: tests/inputs/lexer/fn.input

---
Ok:
  - tt: Fn
    line: 1
    column: 1
  - tt:
      Ident: foo
    line: 1
    column: 4
  - tt: OpenParen
    line: 1
    column: 7
  - tt:
      Ident: a
    line: 1
    column: 8
  - tt: Comma
    line: 1
    column: 9
  - tt:
      Ident: b
    line: 1
    column: 11
  - tt: Comma
    line: 1
    column: 12
  - tt:
      Ident: c
    line: 1
    column: 14
  - tt: CloseParen
    line: 1
    column: 15
  - tt: OpenBrace
    line: 1
    column: 17
  - tt:
      Ident: bar
    line: 2
    column: 5
  - tt: OpenParen
    line: 2
    column: 8
  - tt:
      Ident: a
    line: 2
    column: 9
  - tt: CloseParen
    line: 2
    column: 10
  - tt:
      Op: Plus
    line: 2
    column: 12
  - tt:
      Int: 2
    line: 2
    column: 14
  - tt: CloseBrace
    line: 3
    column: 1

