src/tests/snapshots/lexer@for.input.snap
---
source: tests/lexer.rs
assertion_line: 12
expression: "Lexer::new(&input).collect::<Result<Vec<_>, _>>()"
input_file: tests/inputs/lexer/for.input

---
Ok:
  - tt: For
    line: 1
    column: 1
  - tt: Let
    line: 1
    column: 5
  - tt:
      Ident: x
    line: 1
    column: 9
  - tt:
      Op: Assign
    line: 1
    column: 11
  - tt:
      Int: 1
    line: 1
    column: 13
  - tt: Semicolon
    line: 1
    column: 14
  - tt:
      Ident: x
    line: 1
    column: 16
  - tt:
      Op: Lt
    line: 1
    column: 18
  - tt:
      Int: 10
    line: 1
    column: 20
  - tt: Semicolon
    line: 1
    column: 22
  - tt:
      Int: 1
    line: 1
    column: 24
  - tt: OpenBrace
    line: 1
    column: 26
  - tt:
      Ident: print
    line: 2
    column: 5
  - tt: OpenParen
    line: 2
    column: 10
  - tt:
      Ident: x
    line: 2
    column: 11
  - tt: CloseParen
    line: 2
    column: 12
  - tt: CloseBrace
    line: 3
    column: 1

