src/tests/snapshots/lexer@l_ops.input.snap
---
source: tests/lexer.rs
assertion_line: 12
expression: "Lexer::new(&input).collect::<Result<Vec<_>, _>>()"
input_file: tests/inputs/lexer/l_ops.input

---
Ok:
  - tt:
      Ident: x
    line: 1
    column: 1
  - tt:
      Op: And
    line: 1
    column: 3
  - tt:
      Ident: y
    line: 1
    column: 6
  - tt:
      Ident: x
    line: 2
    column: 1
  - tt:
      Op: Or
    line: 2
    column: 3
  - tt:
      Ident: y
    line: 2
    column: 6
  - tt:
      Ident: x
    line: 3
    column: 1
  - tt:
      Op: Eq
    line: 3
    column: 3
  - tt:
      Ident: y
    line: 3
    column: 6

