src/tests/snapshots/lexer@multi_line_comment.input.snap
---
source: src/lexer.rs
assertion_line: 262
expression: "Lexer::new(&input).collect::<Result<Vec<_>, _>>()"
input_file: src/tests/inputs/lexer/multi_line_comment.input

---
Ok:
  - tt: Let
    line: 1
    column: 1
  - tt:
      Ident: foo
    line: 1
    column: 5
  - tt:
      Op: Assign
    line: 1
    column: 9
  - tt:
      Num: "14"
    line: 1
    column: 11
  - tt:
      Ident: foo
    line: 4
    column: 1

