src/tests/snapshots/lexer@num_err.input.snap
---
source: tests/lexer.rs
assertion_line: 11
expression: "Lexer::new(&input).collect::<Result<Vec<_>, _>>()"
input_file: tests/inputs/lexer/num_err.input

---
Err:
  message: "Invalid number: 1b4"
  line: 1
  column: 11

